--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,18 @@
-{% extends "style.html" %}
-<!--This is the html head.-->
-{% block head %}
-
-{% endblock %}
-<!--This is the html body.-->
-{% block body %}
+<!DOCTYPE HTML>
+<!--
+	Story by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>Phyu Hnin Lwin</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
 	<!-- Wrapper -->
 		<div id="wrapper" class="divided">
 
@@ -348,4 +356,5 @@
 		<script src="assets/js/breakpoints.min.js"></script>
 		<script src="assets/js/util.js"></script>
 		<script src="assets/js/main.js"></script>
-{% endblock %}
+	</body>
+</html>
