--- a/style.css
+++ b/style.css
@@ -10,6 +10,19 @@ body {
   padding: 0;
 }
 
+.btn {
+    display: inline-block;
+    padding: 10px 20px;
+    font-family: RobotoMono;
+    font-style: normal;
+    font-size: 16px;
+    cursor: pointer;
+    background-color: #000000;
+    color: white;
+    border: none;
+    border-radius: 5px;
+}
+
 .container {
   padding: 50px;
   display: flex;
@@ -84,15 +97,16 @@ body {
 /*Listing hackathon projects as images with hover option to see more*/
 .hackathon-project {
   position: relative; /* To position the text on top of the image */
-  width: 200px;
-  height: 200px;
+  width: 400px;
+  height: 300px;
   margin: 10px;
   overflow: hidden; /* Hide the text initially */
 }
 
 .hackathon-project img {
-  width: 100%;
-  height: 100%;
+  /* width: 100%;
+  height: 100%; */
+  width: 400px; height: 300px;
   object-fit: cover; /* Maintain aspect ratio and cover the entire container */
   transition: transform 0.3s ease; /* Add a smooth transition effect */
 }
@@ -121,4 +135,14 @@ body {
   display: flex;
   flex-wrap: wrap; /* Allow items to wrap to the next line */
   justify-content: space-around; /* Distribute items evenly */
+}
+
+.certification-item {
+  object-fit: cover; /* Maintain aspect ratio and cover the entire container */
+}
+
+.certification-item img {
+  width: 400px;
+  height: 300px;
+  padding: 20px 20px;
 }
